--- a/src/app/modules/banking/components/banking-dashboard/banking-dashboard.component.html
+++ b/src/app/modules/banking/components/banking-dashboard/banking-dashboard.component.html
@@ -1,3 +1,4 @@
+<app-spinner *ngIf="isLoading"></app-spinner>
 <section class="dashboard-container bt_container">
     <h1>Welcome, John Doe</h1>
     <p>Check all your activities with the quick online banking. Create your new way of
