--- a/src/app/modules/banking/components/banking-home/banking-home.component.html
+++ b/src/app/modules/banking/components/banking-home/banking-home.component.html
@@ -1,8 +1,4 @@
-<div class="bt" *ngIf="isLoginPage()">
-    <router-outlet></router-outlet>
-</div>
-
-<div class="bt banking container" *ngIf="!isLoginPage()">
+<div class="bt banking container">
     <app-banking-nav></app-banking-nav>
     <div class="banking-content-container">
         <div class="banking-content">
