--- a/src/app/modules/banking/components/login/login.component.html
+++ b/src/app/modules/banking/components/login/login.component.html
@@ -1,41 +1,50 @@
-<div class="login-container">
-    <div class="login-image-container">
-        <section class="copy banner">
-            <h1>ABC Online Banking</h1>
-            <p class="cta">Create your new way of management</p>
-        </section>
-    </div>
-    <div class="login-form-container">
-        <div class="form-container">
-            <div class="copy login-cta">
-                <h2>Login</h2>
-                <p>Welcome back! Please login to your account</p>
-            </div>
-            <form [formGroup]="loginForm" >
-                <div class="form-group-vertical">
-                    <label for="id">Customer ID</label>
-                    <input formControlName="customerId" id="id" type="text" placeholder="Enter your 8 digit Customer ID"/>
-                    <div *ngIf="customerId.invalid && (customerId.touched || customerId.dirty)"
-                         class="bt_inline_error inline-vertical">
-                        <span *ngIf="customerId.hasError('required')">Customer ID is required</span>
-                        <span *ngIf="customerId.hasError('pattern')">Customer ID can only contain numbers</span>
-                        <span *ngIf="customerId.hasError('minlength') || customerId.hasError('maxlength')">
+<div class="bt">
+    <div class="login-container">
+        <div class="login-image-container">
+            <section class="copy banner">
+                <h1>ABC Online Banking</h1>
+                <p class="cta">Create your new way of management</p>
+            </section>
+        </div>
+        <div class="login-form-container">
+            <div class="form-container">
+                <div class="copy login-cta">
+                    <h2>Login</h2>
+                    <p>Welcome back! Please login to your account</p>
+                </div>
+                <form [formGroup]="loginForm">
+                    <div class="form-group-vertical">
+                        <label for="id">Customer ID</label>
+                        <input formControlName="customerId"
+                               id="id"
+                               placeholder="Enter your 8 digit Customer ID"
+                               type="text"/>
+                        <div *ngIf="customerId.invalid && (customerId.touched || customerId.dirty)"
+                             class="bt_inline_error inline-vertical">
+                            <span *ngIf="customerId.hasError('required')">Customer ID is required</span>
+                            <span *ngIf="customerId.hasError('pattern')">Customer ID can only contain numbers</span>
+                            <span *ngIf="customerId.hasError('minlength') || customerId.hasError('maxlength')">
                             Customer ID should be 8 digits
                         </span>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group-vertical">
-                    <label for="password">Password</label>
-                    <input formControlName="password" id="password" type="password" placeholder="Password"/>
-                    <div *ngIf="password.invalid && (password.touched || password.dirty)"
-                         class="bt_inline_error inline-vertical">
-                        <span *ngIf="password.hasError('required')">Password is required</span>
+                    <div class="form-group-vertical">
+                        <label for="password">Password</label>
+                        <input formControlName="password"
+                               id="password"
+                               placeholder="Password"
+                               type="password"/>
+                        <div *ngIf="password.invalid && (password.touched || password.dirty)"
+                             class="bt_inline_error inline-vertical">
+                            <span *ngIf="password.hasError('required')">Password is required</span>
+                        </div>
                     </div>
-                </div>
-                <div class="btn-container jc-center">
-                    <button (click)="login()" class="button btn-primary btn-login">Login</button>
-                </div>
-            </form>
+                    <div class="btn-container jc-center">
+                        <button (click)="login()" class="button btn-primary btn-login">Login
+                        </button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
