--- a/src/styles.css
+++ b/src/styles.css
@@ -605,9 +605,6 @@
 .bt input.switch-input:checked + .slider {
   background: #348AA7;
 }
-.bt .spinner {
-  border-color: #348AA7 #25D9E6 #25D9E6;
-}
 
 @media (min-width: 320px) and (max-width: 899px) {
   .bt.banking {
@@ -940,15 +937,28 @@ input.switch-input:checked + .slider::before {
     flex-direction: column-reverse;
   }
 }
-.spinner {
-  width: 3.5rem;
-  height: 3.5rem;
-  display: inline-block;
+.spinner-wrapper {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.25);
 }
 
 .spinner {
+  display: inline-block;
+  height: 5rem;
+  width: 5rem;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
+.spinner--spin {
   border: dotted 0.35rem;
-  border-color: #FFFFFF16 #25D9E6 #25D9E6;
+  border-color: transparent #348AA7 #348AA7;
   animation: spin 1.8s infinite linear;
 }
 
