--- a/src/styles/_spinner.scss
+++ b/src/styles/_spinner.scss
@@ -1,20 +1,33 @@
-.spinner {
-  width   : 3.5rem;
-  height  : 3.5rem;
-  display : inline-block;
+.spinner-wrapper {
+  width      : 100%;
+  height     : 100vh;
+  position   : fixed;
+  top        : 0;
+  left       : 0;
+  background : rgba(0 0 0 / 0.25);
 }
 
 .spinner {
+  display       : inline-block;
+  height        : 5rem;
+  width         : 5rem;
+  border-radius : 50%;
+  position      : absolute;
+  top           : 50%;
+  left          : 50%;
+}
+
+.spinner--spin {
   border       : dotted 0.35rem;
-  border-color : #FFFFFF16 #25D9E6 #25D9E6;
+  border-color : transparent #348AA7 #348AA7;
   animation    : spin 1.8s infinite linear;
 }
 
 @keyframes spin {
   from {
-    transform : rotate(0);
+	transform : rotate(0);
   }
   to {
-    transform : rotate(360deg);
+	transform : rotate(360deg);
   }
 }
