Removed unused link on footer; Corrected the pointing on the home page links; Corrected the styling of login and search for mobile;

--- a/src/app/modules/e-market/components/footer/footer.component.html
+++ b/src/app/modules/e-market/components/footer/footer.component.html
@@ -15,8 +15,7 @@
         </div>
         <div class="footer-links">
             <h3>Navigate</h3>
-            <a href="#">Shipping & Returns</a>
-            <a href="#">Contact Us</a>
+            <a href="#" routerLink="contact">Contact Us</a>
             <a href="#" routerLink="blog">Blog</a>
         </div>
         <div class="footer-links">
