--- a/src/app/modules/e-market/components/header/header.component.html
+++ b/src/app/modules/e-market/components/header/header.component.html
@@ -1,7 +1,7 @@
 <app-search></app-search>
 <div class="header">
 
-    <nav class="df jc-sb">
+    <nav>
         <div class="logo">
             <a href="#" routerLink="home">
                 <img alt="Logo" src="assets/img/e-market/logo.png">
