--- a/src/app/modules/e-market/components/sign-in/sign-in.component.html
+++ b/src/app/modules/e-market/components/sign-in/sign-in.component.html
@@ -1,7 +1,7 @@
 <div class="header">
-    <nav class="df jc-sb">
+    <nav>
         <div class="logo">
-            <img alt="" src="src/assets/img/e-market/logo.png">
+            <img alt="" src="assets/img/e-market/logo.png">
         </div>
     </nav>
 </div>
