--- a/src/styles.css
+++ b/src/styles.css
@@ -157,6 +157,15 @@ input.switch-input:checked + .slider::before {
   .modal .button-container {
     flex-direction: column-reverse;
   }
+
+  .modal-container.open .modal {
+    left: 0;
+    margin: 1em;
+  }
+
+  .modal {
+    width: 90%;
+  }
 }
 .spinner-wrapper {
   width: 100%;
@@ -1857,7 +1866,7 @@ input.switch-input:checked + .slider::before {
 }
 .e-market-template .orders-wrapper {
   display: grid;
-  grid-auto-flow: column;
+  grid-auto-flow: row;
   grid-template-columns: repeat(3, 1fr);
   gap: 2em;
 }
@@ -2084,10 +2093,6 @@ input.switch-input:checked + .slider::before {
     flex-direction: column;
     justify-content: flex-start;
   }
-  .e-market-template .post-wrapper {
-    grid-auto-flow: row;
-    grid-template-columns: 1fr;
-  }
   .e-market-template footer {
     padding: 2em;
   }
@@ -2123,7 +2128,7 @@ input.switch-input:checked + .slider::before {
   .e-market-template .cart-container table td .image-wrapper {
     display: none;
   }
-  .e-market-template .checkout-container, .e-market-template .form-horizontal {
+  .e-market-template .checkout-container, .e-market-template .form-horizontal, .e-market-template .post-wrapper {
     grid-template-columns: 1fr;
     grid-auto-flow: row;
   }
@@ -2146,7 +2151,7 @@ input.switch-input:checked + .slider::before {
   .e-market-template .search-container .icon-search {
     right: 13px;
   }
-  .e-market-template .tab-content-container, .e-market-template .tab-group {
+  .e-market-template .tab-content-container, .e-market-template .tab-group, .e-market-template .orders-wrapper {
     grid-template-columns: 1fr;
   }
   .e-market-template .tab-group ul {
@@ -2154,6 +2159,16 @@ input.switch-input:checked + .slider::before {
   }
   .e-market-template .tab-content {
     margin-right: 2em;
+  }
+  .e-market-template .blog__post {
+    flex-direction: column;
+  }
+  .e-market-template .product-details-container {
+    flex-direction: column;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
   }
 }
 *, *::before, *::after {
