nav bar styles for large screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -1171,6 +1171,8 @@ input.switch-input:checked + .slider::before {
   list-style: none;
 }
 .e-market-template nav {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 .e-market-template nav img {
