--- a/src/styles/_emarket.scss
+++ b/src/styles/_emarket.scss
@@ -151,7 +151,9 @@ $text-background : #F5F5F5;
   }
 
   nav {
-	align-items : center;
+	display         : flex;
+	justify-content : space-between;
+	align-items     : center;
 
 	img {
 	  max-width : 100%;
