--- a/src/styles/_helper.scss
+++ b/src/styles/_helper.scss
@@ -6,6 +6,21 @@
   justify-content : center;
 }
 
+.jc-space-btw {
+  justify-content : space-between;
+}
+
+.jc-right {
+  justify-content : flex-end;
+}
+
 .jc-sb {
   justify-content : space-between;
+}
+
+@mixin flex($justifyContent: flex-start, $alignItem: flex-start, $direction: row) {
+  display         : flex;
+  justify-content : $justifyContent;
+  align-items     : $alignItem;
+  flex-direction  : $direction;
 }
