--- a/src/styles/_banking.scss
+++ b/src/styles/_banking.scss
@@ -79,9 +79,7 @@ $error-clr          : #DB3939;
   }
 
   .banking-content .header {
-	display         : flex;
-	justify-content : flex-end;
-	align-items     : center;
+	@include flex(flex-end, center);
 	padding         : 12px;
 	margin-bottom   : 32px;
 
@@ -101,8 +99,7 @@ $error-clr          : #DB3939;
   }
 
   .banking-content .search-container {
-	display         : flex;
-	justify-content : flex-end;
+	@include flex(flex-end);
 	box-shadow      : 6px 7px 15px 0 rgba(0, 0, 0, 0.14);
 	border-radius   : 20px;
   }
@@ -142,13 +139,11 @@ $error-clr          : #DB3939;
   }
 
   .banking-content .notification {
+	@include flex(center);
 	height          : 40px;
 	width           : 40px;
 	border-radius   : 50%;
 	background      : white;
-	display         : flex;
-	justify-content : center;
-	align-items     : center;
 	box-shadow      : 6px 7px 15px 0 rgba(0, 0, 0, 0.14);
   }
 
@@ -173,10 +168,8 @@ $error-clr          : #DB3939;
   }
 
   .summary {
+	@include flex($alignItem: center);
 	border-radius   : 10px;
-	display         : flex;
-	justify-content : flex-start;
-	align-items     : center;
 	margin-bottom   : 24px;
 
 	div {
@@ -184,8 +177,7 @@ $error-clr          : #DB3939;
 	}
 
 	.summary-content {
-	  display     : flex;
-	  align-items : center;
+	  @include flex($alignItem: center);
 
 	  h2 {
 		color : $primary-color;
@@ -237,9 +229,7 @@ $error-clr          : #DB3939;
   }
 
   .logo {
-	display         : flex;
-	justify-content : center;
-	align-items     : center;
+	@include flex(center);
 	padding         : 24px;
 
 	&__bg {
@@ -283,13 +273,10 @@ $error-clr          : #DB3939;
 
   /*****LOGIN START*****/
   .login-container {
-	display        : flex;
-	flex-direction : row;
+	@include flex();
 
 	.login-image-container {
-	  display           : flex;
-	  justify-content   : center;
-	  align-items       : center;
+	  @include flex(center);
 	  background        : linear-gradient(rgb(0 0 0 / 50%), rgb(0 0 0 / 75%)), url(https://images.unsplash.com/photo-1535957998253-26ae1ef29506?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjF8fG9mZmljZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);
 	  background-size   : cover;
 	  height: 100vh;
@@ -320,10 +307,8 @@ $error-clr          : #DB3939;
 	}
 
 	.login-form-container {
-	  display         : flex;
+	  @include flex(center);
 	  flex-direction  : column;
-	  justify-content : center;
-	  align-items     : center;
 	  flex: 1;
 	}
 
@@ -332,8 +317,7 @@ $error-clr          : #DB3939;
 	}
 
 	.form-group-vertical {
-	  display        : flex;
-	  flex-direction : column;
+	  @include flex($direction: column);
 	  margin-bottom  : 3em;
 	}
 
@@ -382,8 +366,7 @@ $error-clr          : #DB3939;
 		}
 
 		& span.transaction-type {
-		  display     : flex;
-		  align-items : center;
+		  @include flex($alignItem: center);
 		}
 
 		button {
@@ -488,21 +471,8 @@ $error-clr          : #DB3939;
   }
 
   .btn-container {
-	display         : flex;
-	justify-content : space-between;
+	@include flex(space-between);
 	margin          : 48px 0;
-  }
-
-  .jc-center {
-	justify-content : center;
-  }
-
-  .jc-space-btw {
-	justify-content : space-between;
-  }
-
-  .jc-right {
-	justify-content : flex-end;
   }
 
   .button {
@@ -601,11 +571,9 @@ $error-clr          : #DB3939;
 	grid-gap              : 2em;
 
 	img {
+	  @include flex(center);
 	  width           : 65%;
 	  border-radius   : 50%;
-	  display         : flex;
-	  justify-content : center;
-	  align-items     : center;
 	  align-self      : center;
 	  margin          : 24px auto;
 	}
@@ -656,14 +624,12 @@ $error-clr          : #DB3939;
   }
 
   .alert {
-	display     : flex;
-	align-items : center;
+	@include flex($alignItem: center);
   }
 
   .alert_heading {
-	display         : flex;
+	@include flex(center);
 	margin-bottom   : 24px;
-	justify-content : center;
 
 	svg {
 	  fill : white;
@@ -671,9 +637,7 @@ $error-clr          : #DB3939;
   }
 
   .alert_body {
-	display        : flex;
-	flex-direction : column;
-	align-items    : center;
+	@include flex($alignItem: center, $direction: center);
 
 	span {
 	  margin-bottom : 12px;
