--- a/src/styles.css
+++ b/src/styles.css
@@ -546,7 +546,7 @@ input.switch-input:checked + .slider::before {
 .bt .login-container .login-image-container {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: row;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.75)), url(https://images.unsplash.com/photo-1535957998253-26ae1ef29506?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjF8fG9mZmljZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);
   background-size: cover;
@@ -574,7 +574,7 @@ input.switch-input:checked + .slider::before {
 .bt .login-container .login-form-container {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: row;
   flex-direction: column;
   flex: 1;
@@ -584,8 +584,8 @@ input.switch-input:checked + .slider::before {
 }
 .bt .login-container .form-group-vertical {
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: initial;
   flex-direction: column;
   margin-bottom: 3em;
 }
@@ -2436,6 +2436,7 @@ button svg {
 }
 .banking .notification svg {
   margin-right: 0;
+  margin-top: 0.65rem;
 }
 
 .floating {
