--- a/src/app/modules/banking/components/header/header.component.html
+++ b/src/app/modules/banking/components/header/header.component.html
@@ -20,7 +20,7 @@
              src="https://randomuser.me/api/portraits/men/43.jpg">
     </div>
     <div>
-        <a href="" routerLink="" title="Log out">
+        <a href="#" (click)="logout($event)" title="Log out">
             <app-svg-icon [svgIconId]="'sign-out'"></app-svg-icon>
         </a>
     </div>
