--- a/src/styles/_banking.scss
+++ b/src/styles/_banking.scss
@@ -78,8 +78,8 @@ $error-clr          : #DB3939;
 
   .banking-content .header {
 	@include flex(flex-end, center);
-	padding         : 12px;
-	margin-bottom   : 32px;
+	padding       : 12px;
+	margin-bottom : 32px;
 
 	div:not(:last-of-type) {
 	  margin-right : 24px;
@@ -98,8 +98,8 @@ $error-clr          : #DB3939;
 
   .banking-content .search-container {
 	@include flex(flex-end);
-	box-shadow      : 6px 7px 15px 0 rgba(0, 0, 0, 0.14);
-	border-radius   : 20px;
+	box-shadow    : 6px 7px 15px 0 rgba(0, 0, 0, 0.14);
+	border-radius : 20px;
   }
 
   .banking-content .search-input {
@@ -138,11 +138,11 @@ $error-clr          : #DB3939;
 
   .banking-content .notification {
 	@include flex(center);
-	height          : 40px;
-	width           : 40px;
-	border-radius   : 50%;
-	background      : white;
-	box-shadow      : 6px 7px 15px 0 rgba(0, 0, 0, 0.14);
+	height        : 40px;
+	width         : 40px;
+	border-radius : 50%;
+	background    : white;
+	box-shadow    : 6px 7px 15px 0 rgba(0, 0, 0, 0.14);
   }
 
   .banking-content .profile img {
@@ -166,16 +166,16 @@ $error-clr          : #DB3939;
   }
 
   .summary {
-	@include flex($alignItem: center);
-	border-radius   : 10px;
-	margin-bottom   : 24px;
+	@include flex($alignItem : center);
+	border-radius : 10px;
+	margin-bottom : 24px;
 
 	div {
 	  flex : 1;
 	}
 
 	.summary-content {
-	  @include flex($alignItem: center);
+	  @include flex($alignItem : center);
 
 	  h2 {
 		color : $primary-color;
@@ -228,7 +228,12 @@ $error-clr          : #DB3939;
 
   .logo {
 	@include flex(center);
-	padding         : 24px;
+	padding : 24px;
+
+	a {
+	  text-decoration : none;
+	  color           : $font-color;
+	}
 
 	&__bg {
 	  height        : 50px;
@@ -275,10 +280,10 @@ $error-clr          : #DB3939;
 
 	.login-image-container {
 	  @include flex(center, center);
-	  background        : linear-gradient(rgb(0 0 0 / 50%), rgb(0 0 0 / 75%)), url(https://images.unsplash.com/photo-1535957998253-26ae1ef29506?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjF8fG9mZmljZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);
-	  background-size   : cover;
-	  height: 100vh;
-	  flex: 1;
+	  background      : linear-gradient(rgb(0 0 0 / 50%), rgb(0 0 0 / 75%)), url(https://images.unsplash.com/photo-1535957998253-26ae1ef29506?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjF8fG9mZmljZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);
+	  background-size : cover;
+	  height          : 100vh;
+	  flex            : 1;
 	}
 
 	.copy {
@@ -306,8 +311,8 @@ $error-clr          : #DB3939;
 
 	.login-form-container {
 	  @include flex(center, center);
-	  flex-direction  : column;
-	  flex: 1;
+	  flex-direction : column;
+	  flex           : 1;
 	}
 
 	.form-container {
@@ -316,7 +321,7 @@ $error-clr          : #DB3939;
 
 	.form-group-vertical {
 	  @include flex(center, initial, column);
-	  margin-bottom  : 3em;
+	  margin-bottom : 3em;
 	}
 
 	label {
@@ -324,8 +329,8 @@ $error-clr          : #DB3939;
 	}
 
 	.btn-login {
-	  width: 100%;
-	  margin: 0;
+	  width  : 100%;
+	  margin : 0;
 	}
 
   }
@@ -364,7 +369,7 @@ $error-clr          : #DB3939;
 		}
 
 		& span.transaction-type {
-		  @include flex($alignItem: center);
+		  @include flex($alignItem : center);
 		}
 
 		button {
@@ -470,7 +475,7 @@ $error-clr          : #DB3939;
 
   .btn-container {
 	@include flex(space-between);
-	margin          : 48px 0;
+	margin : 48px 0;
   }
 
   .button {
@@ -570,10 +575,10 @@ $error-clr          : #DB3939;
 
 	img {
 	  @include flex(center);
-	  width           : 65%;
-	  border-radius   : 50%;
-	  align-self      : center;
-	  margin          : 24px auto;
+	  width         : 65%;
+	  border-radius : 50%;
+	  align-self    : center;
+	  margin        : 24px auto;
 	}
 
 	.left-panel {
@@ -622,12 +627,12 @@ $error-clr          : #DB3939;
   }
 
   .alert {
-	@include flex($alignItem: center);
+	@include flex($alignItem : center);
   }
 
   .alert_heading {
 	@include flex(center);
-	margin-bottom   : 24px;
+	margin-bottom : 24px;
 
 	svg {
 	  fill : white;
@@ -635,7 +640,7 @@ $error-clr          : #DB3939;
   }
 
   .alert_body {
-	@include flex($alignItem: center, $direction: center);
+	@include flex($alignItem : center, $direction : center);
 
 	span {
 	  margin-bottom : 12px;
