--- a/src/styles.css
+++ b/src/styles.css
@@ -51,18 +51,18 @@ input.switch-input:checked + .slider {
 }
 
 input.switch-input:checked + .slider::before {
-  left: 22px;
+  left: 25px;
 }
 
 .slider::before {
   content: "";
-  width: 25px;
-  height: 25px;
+  width: 17px;
+  height: 17px;
   border-radius: 50%;
   background: white;
   position: absolute;
-  top: -3px;
-  left: 0;
+  top: 1px;
+  left: 3px;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.6);
   transition: 0.2s ease-out;
 }
@@ -506,6 +506,10 @@ input.switch-input:checked + .slider::before {
   align-items: flex-start;
   flex-direction: row;
   padding: 24px;
+}
+.bt .logo a {
+  text-decoration: none;
+  color: #616161;
 }
 .bt .logo__bg {
   height: 50px;
