Hide email template on mobile device

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="isHomePage()" class="main">
-    <div class="card">
+    <div class="card email-template">
         <h3 class="card__heading">Email Web Template</h3>
         <p class="card__description">This is an email inbox web template built using
             HTML, CSS and Angular</p>
