--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,47 @@
 <div *ngIf="isHomePage()" class="main">
-    <div class="card email-template">
-        <h3 class="card__heading">Email Web Template</h3>
-        <p class="card__description">This is an email inbox web template built using
-            HTML, CSS and Angular</p>
-        <button routerLink="email-inbox/home"
-           >View Template</button>
-    </div>
+  <div class="card email-template">
+    <h3 class="card__heading">Email Web Template</h3>
+    <p class="card__description">This is an email inbox web template built using
+      HTML, CSS and Angular</p>
+    <button routerLink="email-inbox/home"
+    >View Template
+    </button>
+  </div>
 
-    <div class="card">
-        <h3 class="card__heading">Online Banking Template</h3>
-        <p class="card__description">This is an online banking web application template built using
-            HTML, CSS and Angular</p>
-        <button routerLink="banking/login"
-           >View Template</button>
-    </div>
+  <div class="card">
+    <h3 class="card__heading">Online Banking Template</h3>
+    <p class="card__description">This is an online banking web application template built using
+      HTML, CSS and Angular</p>
+    <button routerLink="banking/login"
+    >View Template
+    </button>
+  </div>
 
-    <div class="card">
-        <h3 class="card__heading">Easy Bank Template</h3>
-        <p class="card__description">This is a static web page built using HTML and CSS.</p>
-        <button routerLink="easy-bank/home"
-           >View Template</button>
-    </div>
+  <div class="card">
+    <h3 class="card__heading">Easy Bank Template</h3>
+    <p class="card__description">This is a static web page built using HTML and CSS.</p>
+    <button routerLink="easy-bank/home"
+    >View Template
+    </button>
+  </div>
 
-    <div class="card">
-        <h3 class="card__heading">E-Market Template</h3>
-        <p class="card__description">This is a website template to buy fruits and vegetables.
-            This website is built using HTML and CSS.</p>
-        <button routerLink="e-market"
-           >View Template</button>
-    </div>
+  <div class="card">
+    <h3 class="card__heading">E-Market Template</h3>
+    <p class="card__description">This is a website template to buy fruits and vegetables.
+      This website is built using HTML, CSS and Angular.</p>
+    <button routerLink="e-market"
+    >View Template
+    </button>
+  </div>
+
+  <div class="card">
+    <h3 class="card__heading">Super Lancer Template</h3>
+    <p class="card__description">This is a website template to find jobs ans freelancers.
+      This website is built using HTML, CSS and Angular.</p>
+    <button routerLink="super-lancer"
+    >View Template
+    </button>
+  </div>
 </div>
 
 <router-outlet></router-outlet>
